--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,15 @@
     "private": true,
     "proxy": "http://127.0.0.1:8000/",
     "dependencies": {
-        "leaflet.markercluster": "^1.3.0",
+        "leaflet.markercluster": "^1.4.0",
         "mapbox.js": "^3.1.1",
-        "node-sass-chokidar": "0.0.3",
-        "npm-run-all": "^4.1.2",
-        "react": "^16.3.2",
-        "react-dom": "^16.3.2",
-        "react-ga": "^2.5.0",
-        "react-router-dom": "^4.2.2",
-        "react-scripts": "1.1.0",
+        "node-sass-chokidar": "^1.3.3",
+        "npm-run-all": "^4.1.3",
+        "react": "^16.4.2",
+        "react-dom": "^16.4.2",
+        "react-ga": "^2.5.3",
+        "react-router-dom": "^4.3.1",
+        "react-scripts": "^1.1.5",
         "redux": "^3.7.2"
     },
     "scripts": {
@@ -29,9 +29,9 @@
     "devDependencies": {
         "eslint": "^4.19.1",
         "eslint-config-synacor": "^2.1.0",
-        "eslint-plugin-react": "^7.7.0",
-        "jest": "^22.4.3",
-        "jest-cli": "^22.4.3"
+        "eslint-plugin-react": "^7.11.1",
+        "jest": "^22.4.4",
+        "jest-cli": "^23.5.0"
     },
     "eslintIgnore": [
         "build/*",
